--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,91 +1,99 @@
 buildscript {
-  repositories {
-    google()
-    mavenCentral()
-  }
+    repositories {
+        google()
+        mavenCentral()
+    }
 
-  dependencies {
-    classpath "com.android.tools.build:gradle:7.2.1"
-  }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.2.1"
+    }
 }
 
 def reactNativeArchitectures() {
-  def value = rootProject.getProperties().get("reactNativeArchitectures")
-  return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
+    def value = rootProject.getProperties().get("reactNativeArchitectures")
+    return value ? value.split(",") : ["armeabi-v7a", "x86", "x86_64", "arm64-v8a"]
 }
 
 def isNewArchitectureEnabled() {
-  return rootProject.hasProperty("newArchEnabled") && rootProject.getProperty("newArchEnabled") == "true"
+    return rootProject.hasProperty("newArchEnabled") && rootProject.getProperty("newArchEnabled") == "true"
 }
 
 apply plugin: "com.android.library"
 
 if (isNewArchitectureEnabled()) {
-  apply plugin: "com.facebook.react"
+    apply plugin: "com.facebook.react"
 }
 
 def getExtOrDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["Movesense_" + name]
+    return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["Movesense_" + name]
 }
 
 def getExtOrIntegerDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["Movesense_" + name]).toInteger()
+    return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["Movesense_" + name]).toInteger()
 }
 
 def supportsNamespace() {
-  def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
-  def major = parsed[0].toInteger()
-  def minor = parsed[1].toInteger()
+    def parsed = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')
+    def major = parsed[0].toInteger()
+    def minor = parsed[1].toInteger()
 
-  // Namespace support was added in 7.3.0
-  return (major == 7 && minor >= 3) || major >= 8
+    // Namespace support was added in 7.3.0
+    return (major == 7 && minor >= 3) || major >= 8
 }
 
 android {
-  if (supportsNamespace()) {
-    namespace "com.movesense"
+    if (supportsNamespace()) {
+        namespace "com.ferdiu.movesense"
 
-    sourceSets {
-      main {
-        manifest.srcFile "src/main/AndroidManifestNew.xml"
-      }
+        sourceSets {
+            main {
+                manifest.srcFile "src/main/AndroidManifestNew.xml"
+            }
+        }
     }
-  }
 
-  compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
+    compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
 
-  defaultConfig {
-    minSdkVersion getExtOrIntegerDefault("minSdkVersion")
-    targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
+    defaultConfig {
+        minSdkVersion getExtOrIntegerDefault("minSdkVersion")
+        targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
 
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
     }
-  }
 
-  lintOptions {
-    disable "GradleCompatible"
-  }
+    buildTypes {
+        release {
+            minifyEnabled false
+        }
+    }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
+    lintOptions {
+        disable "GradleCompatible"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 }
 
 repositories {
-  mavenCentral()
-  google()
+    mavenCentral()
+    google()
 }
 
 
 dependencies {
-  // For < 0.71, this will be from the local maven repo
-  // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
-  //noinspection GradleDynamicVersion
-  implementation "com.facebook.react:react-native:+"
+    // For < 0.71, this will be from the local maven repo
+    // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
+    //noinspection GradleDynamicVersion
+    // downloaded from: https://bitbucket.org/movesense/movesense-mobile-lib/src/master/android/Movesense/mdslib-3.15.0(1)-release.aar
+    implementation files("libs/mdslib-3.15.0(1)-release.aar")
+    // implementation files("libs/mdslib-1.63.0(1)-release.aar")
+    implementation "com.facebook.react:react-android:+"
+    // these are required by mds android lib
+    // see: https://bitbucket.org/movesense/movesense-mobile-lib/src/master/android/AndroidGradle.json
+    implementation "com.polidea.rxandroidble2:rxandroidble:1.10.2"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
 }
 
