--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "com.android.tools.build:gradle:7.4.2"
     }
 }
 
@@ -87,8 +87,10 @@ dependencies {
     // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
     //noinspection GradleDynamicVersion
     // downloaded from: https://bitbucket.org/movesense/movesense-mobile-lib/src/master/android/Movesense/mdslib-3.15.0(1)-release.aar
-    implementation files("libs/mdslib-3.15.0(1)-release.aar")
+    // implementation files("libs/mdslib-3.15.0(1)-release.aar")
     // implementation files("libs/mdslib-1.63.0(1)-release.aar")
+    // implementation "com.facebook.react:react-android:0.74.0"
+    implementation(name: 'mdslib', version: '+', ext: 'aar')
     implementation "com.facebook.react:react-android:+"
     // these are required by mds android lib
     // see: https://bitbucket.org/movesense/movesense-mobile-lib/src/master/android/AndroidGradle.json
