--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -18,4 +18,12 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        flatDir{
+            dirs "$rootDir/../../android/libs"
+        }
+    }
+}
+
 apply plugin: "com.facebook.react.rootproject"
